k8s/overlays/staging/odoo-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oemis-odoo
spec:
  replicas: 1
